# nt-assignments

./: .gitignore  Cargo.toml  build.rs
completions/: _nt-tools.ps1
notes/: Number_Field_Sieve_-_example_for_Investigation_final.aux  Number_Field_Sieve_-_example_for_Investigation_final.tex  Pohlig_Hellman.aux  Pohlig_Hellman.tex  ajeesh_msc_crypto_ass1.aux  ajeesh_msc_crypto_ass1.out  ajeesh_msc_crypto_ass1.tex  ajeesh_msc_crypto_ass3.tex  ass1.aux  ass1.tex  ass2.aux  ass2.out  ass2.tex  ass2_q4_a.aux  ass2q4a.tex  ass2q4b.aux  ass2q4b.tex  ass3.aux  ass3.out  ass3.tex  ass3q2a.aux  ass3q2a.tex  ass3q3.aux  ass3q3.tex  ass3q5.aux  ass3q5.tex  nfs_exercise.aux  nfs_exercise.tex  notes.tex  nt-tools-usage-guide.tex
results/: question3_2800-3100.json  question3_50-100.json
src/: README.md  cli.rs  cli_ops.rs  display.rs  factorisations.rs  groups_modulo_n.rs  logarithms.rs  main.rs  presets.rs  primality.rs  prime_factors.rs  quadratic_sieve.rs  utils.rs
