[package]
name = "nt-assignments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
num-bigint = { version = "0.4", features = ["rand"] }
#num-iter = "0.1.43"
clap = { version = "4.4.6", features = ["derive", "cargo"] }
fmtastic = "0.1.0"
itertools = "0.12.0"
rayon = "1.8.0"

[dependencies.num-iter]
version = "0.1.35"
default-features = false