[package]
name = "nt-assignments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2.17"
clap = { version = "4.4.6", features = ["derive", "cargo"] }
fmtastic = "0.1.0"
itertools = "0.12.0"
tabled = "0.15.0"
rayon = "1.8.0"
table_to_html = "0.4.0"
terminal_size = "0.3.0"
dpc-pariter = "0.5.1"
owo-colors = "4.0.0"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.110"
homedir = "0.2.1"

[dependencies.num-iter]
version = "0.1.35"
default-features = false